--- a/SPE-website/pages/templates/pages/landing-page.html
+++ b/SPE-website/pages/templates/pages/landing-page.html
@@ -12,10 +12,10 @@
             <h2>SPE IIT ISM STUDENT CHAPTER</h2>
             <img src="{% static 'pages/landingpage-bg/chapter-logo.png' %}" style="height: 230px;">
             <div class="text-case">
-                <p class="chapter-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                    when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                    It has survived not only fiv Lorem Ipsum has been the industry's standard</p>
+                <p class="chapter-text">SPE IIT ISM DHANBAD STUDENT CHAPTER started its journey in 1984. This was the first
+                    student chapter at any Indian university and since then the chapter started a new way to connect with the
+                    students, industry, alumni, research fellow across the globe to gain an insight into the industry with a gulp
+                    of research essence.</p>
             </div>
 
             <div class="center" style="float: left; margin-left: 180px;">
