now gallery truly done

--- a/SPE-website/pages/templates/pages/gallery1.html
+++ b/SPE-website/pages/templates/pages/gallery1.html
@@ -82,7 +82,7 @@ $(document).ready(function(){
 	});
 
 	//previous slide
-	$('#previous').click(function(){
+	$('#previous1').click(function(){
 		slideLeft();
 	});
 
