Gazette section postion altered

--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -196,39 +196,16 @@
 <div class="main main-raised ">
     <div class="container " style="padding: 5% 1%; ">
         <div class="row ">
-            <div class="col-md-4 " data-aos="fade-up " data-aos-duration="1000 ">
+            <div class="col-md-4 col-sm-12 " data-aos="fade-up " data-aos-duration="1000 ">
                 <div class="card shadow ">
                     <div class="card-header ">Facebook</div>
                     <div class="card-body " style="line-height: 24px; ">
                         <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fspeismsc%2F&tabs=timeline&width=300&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId
-            " width="300 " height="350 " style="border:none;overflow:hidden " scrolling="no " frameborder="0 " allowTransparency="true " allow="encrypted-media "></iframe>
+                " width="300 " height="350 " style="border:none;overflow:hidden " scrolling="no " frameborder="0 " allowTransparency="true " allow="encrypted-media "></iframe>
                     </div>
                 </div>
             </div>
-            <!-- <div class="col-md-4 ">
-                    <div class="card shadow ">
-                        <div class="card-header ">Facebook</div>
-                        <div class="card-body " style="line-height: 24px; ">
-                            <iframe src=" " width="300 " height="250 " style="border:none;overflow:hidden " scrolling="no " frameborder="0 " allowTransparency="true " allow="encrypted-media "></iframe>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 ">
-                    <div class="card shadow ">
-                        <div class="card-header ">Facebook</div>
-                        <div class="card-body " style="line-height: 24px; ">
-                            <iframe src=" " width="300 " height="250 " style="border:none;overflow:hidden " scrolling="no " frameborder="0 " allowTransparency="true " allow="encrypted-media "></iframe>
-                        </div>
-                    </div>
-                </div> -->
-        </div>
-    </div>
-
-
-    <!-- Gazette Section -->
-    <div class="container " style="color: black !important;font-family: 'Dosis', sans-serif; margin-bottom: 8%; ">
-        <div class="row ">
-            <div class="col-lg-5 col-sm-12 " style="padding:5% 1%; margin-bottom: 8%; " data-aos="fade-right " data-aos-duration="2000 ">
+            <div class="col-md-6 offset-md-2 col-sm-12 " style="color: black !important;font-family: 'Dosis', sans-serif; margin-bottom: 8%;" data-aos="fade-up " data-aos-duration="1000">
                 <p style="font-size: 4rem; font-weight: 700; text-align: center; ">GAZETTE 2020</p>
                 <div class="card-gazette " style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url( '../../../media/blog_images/oilrig_q8U2v17.jpg') ">
                     <div class="gazette-body ">
@@ -245,37 +222,6 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="col-lg-5 offset-md-2 col-sm-12 " style="padding:5% 1%; ">
-                        <div class="card shadow ">
-                            <div class="card-header ">ANNOUNCEMENTS</div>
-                            <div class="card-body ">
-                                <div class="test ">
-                                    <marquee direction="up " onmouseover="this.stop(); " onmouseout="this.start(); " scrollamount="3 ">
-                                        <p> <b>
-                                 <br> <a href="# ">
-                            1   .&nbsp;Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</a>
-                                     <br>
-                                 <br>
-                                     <a href="# ">
-                            2   .&nbsp;It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </a>
-                                     <br>
-                                 <br>
-                                     <a href="# ">
-                            3   .&nbsp;Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words</a>
-                                     <br>
-                                 <br>
-                                 <a href="# ">
-                            4  .&nbsp;There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable</a>
-                                     <br>
-                                    </b></p>
-                                    </marquee>
-                                    <br>
-                                    <br>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div> -->
         </div>
     </div>
 </div>
@@ -315,5 +261,9 @@
         delay: 10,
         time: 1000
     });
+</script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    AOS.init();
 </script>
 {% endblock content %}
