--- a/SPE-website/pages/templates/pages/gallery1.html
+++ b/SPE-website/pages/templates/pages/gallery1.html
@@ -152,8 +152,22 @@
     </div>
     <br><br>
     <script src="{% static 'pages/gallery-js/gallery1-e3.js' %}"></script>
-   <!-- Event 2-->
+   <!-- Event 3-->
 
-
+    <!-- Static Images -->
+    <div class="col-md-12">
+        <div class="grid-container" style="margin-left: 45px;">
+          <img class="gal-img" style="width: 500px; height: 250px;" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">
+          <img class="gal-img" style="width: 500px; height: 250px;" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">
+          <img class="gal-img" style="width: 500px; height: 250px;" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">
+          <img class="gal-img" style="width: 500px; height: 250px;" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">
+          <img class="gal-img" style="width: 500px; height: 250px;" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">
+          <img class="gal-img" style="width: 500px; height: 250px;" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">
+          <img class="gal-img" style="width: 500px; height: 250px;" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">
+          <img class="gal-img" style="width: 500px; height: 250px;" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">
+          <img class="gal-img" style="width: 500px; height: 250px;" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">
+        </div>
+    </div>
+    <!-- Static Images -->
 
 {% endblock content %}
