team member images added

--- a/SPE-website/pages/templates/pages/core-team.html
+++ b/SPE-website/pages/templates/pages/core-team.html
@@ -31,10 +31,10 @@
                     <div class="flip-card">
                       <div class="flip-card-inner">
                         <div class="flip-card-front">
-                          <img class="round-img" src="{% static 'pages/team-images/jon-snow.jpg' %}" alt="Avatar">
+                          <img class="round-img" src="{% static 'pages/office-bearers/HOD.jpg' %}" alt="Avatar">
                         </div>
                         <div class="flip-card-back flip-border"
-                             style="background-image: url(/media/core-team_images/jon-snow-blur.jpg);">
+                             style="background-image: url(/static/pages/office-bearers/HOD-blur.jpg);">
                           <h1 class="card-title" style="color: black;">Dr. Ajay Mandal</h1>
                           <hr class="underline" style="background-color: black;">
                           <p class="card-content" style="color: black;">Head of the Department, Petroleum Engineering Department</p>
@@ -49,13 +49,13 @@
                     <div class="flip-card">
                       <div class="flip-card-inner">
                         <div class="flip-card-front">
-                          <img class="round-img" src="{% static 'pages/team-images/jon-snow.jpg' %}" alt="Avatar">
+                          <img class="round-img" src="{% static 'pages/office-bearers/covener.jpg' %}" alt="Avatar">
                         </div>
                         <div class="flip-card-back flip-border"
-                             style="background-image: url(/media/core-team_images/jon-snow-blur.jpg);">
-                          <h1 class="card-title" style="color: black;">Dr. Neetish Kumar Maurya</h1>
-                          <hr class="underline" style="background-color: black;">
-                          <p class="card-content" style="color: black;">Faculty Convener</p>
+                             style="background-image: url(/static/pages/office-bearers/covener-blur.jpg);">
+                          <h1 class="card-title" style="color: white;">Dr. Neetish Kumar Maurya</h1>
+                          <hr class="underline" style="background-color: white;">
+                          <p class="card-content" style="color: white;">Faculty Convener</p>
                           <a href="https://www.facebook.com/neetishmaurya"><i class="fa fa-facebook"></i></a>
                           <a href=" https://www.linkedin.com/in/neetish-kumar-maurya-22b08a1a/?originalSubdomain=in">
                               <i class="fa fa-linkedin"></i></a>
@@ -163,13 +163,13 @@
                     <div class="flip-card">
                       <div class="flip-card-inner">
                         <div class="flip-card-front">
-                          <img class="round-img" src="{% static 'pages/team-images/jon-snow.jpg' %}" alt="Avatar">
+                          <img class="round-img" src="{% static 'pages/office-bearers/harshit-sir.jpg' %}" alt="Avatar">
                         </div>
                         <div class="flip-card-back flip-border"
-                             style="background-image: url(/media/core-team_images/jon-snow-blur.jpg);">
-                          <h1 class="card-title" style="color: black;">Harshit Pathak</h1>
-                          <hr class="underline" style="background-color: black;">
-                          <p class="card-content" style="color: black;">Technical Chair</p>
+                             style="background-image: url(/static/pages/office-bearers/harshit-sir-blur.jpg);">
+                          <h1 class="card-title" style="color: white;">Harshit Pathak</h1>
+                          <hr class="underline" style="background-color: white;">
+                          <p class="card-content" style="color: white;">Technical Chair</p>
                           <a href="https://www.linkedin.com/in/harshitpathak0311/"><i class="fa fa-linkedin"></i></a>
                           <a href="https://www.facebook.com/harshit.pathak.90663"><i class="fa fa-facebook"></i></a>
                         </div>
@@ -280,15 +280,15 @@
                     <div class="flip-card">
                       <div class="flip-card-inner">
                         <div class="flip-card-front">
-                          <img class="round-img" src="{% static 'pages/team-images/jon-snow.jpg' %}" alt="Avatar">
+                          <img class="round-img" src="{% static 'pages/developer-img/shadan.jpg' %}" alt="Avatar">
                         </div>
                         <div class="flip-card-back flip-border"
-                             style="background-image: url(/media/core-team_images/jon-snow-blur.jpg);">
-                          <h1 class="card-title" style="color: black;">Shadan Arif</h1>
-                          <hr class="underline" style="background-color: black;">
-                          <p class="card-content" style="color: black;">Front End Developer</p>
+                             style="background-image: url(/static/pages/developer-img/shadan-blur.jpg);">
+                          <h1 class="card-title" style="color: white;">Shadan Arif</h1>
+                          <hr class="underline" style="background-color: white;">
+                          <p class="card-content" style="color:white;">Front End Developer</p>
                           <a href="https://www.linkedin.com/in/shadan-arif-24b1791b2/"><i class="fa fa-linkedin"></i></a>
-                          <a href="#"><i class="fa fa-facebook"></i></a>
+                          <a href="https://www.facebook.com/shadan.arif.333/"><i class="fa fa-facebook"></i></a>
                         </div>
                       </div>
                     </div>
@@ -306,9 +306,9 @@
                           <hr class="underline" style="background-color: white;">
                           <p class="card-content" style="color: white;">Content Writer</p>
                           <a href="http://linkedin.com/in/nirmalya-basu-6161a4120">
-                              <i class="fa fa-linkedin" style="color: #0077b5"></i></a>
+                              <i class="fa fa-linkedin"></i></a>
                           <a href="https://www.facebook.com/nirmalya.basu.14">
-                              <i class="fa fa-facebook" style="color: #4867aa"></i></a>
+                              <i class="fa fa-facebook"></i></a>
                         </div>
                       </div>
                     </div>
