--- a/SPE-website/pages/templates/pages/gallery1.html
+++ b/SPE-website/pages/templates/pages/gallery1.html
@@ -15,31 +15,39 @@
         <hr class="d-block mx-auto" style="width: 210px; height: 1px; background-color: #007bff; margin-bottom: 50px;">
         <br><br>
 
-<!-- Event 1-->
+    <!-- Event 1-->
     <div class="d-block mx-auto" style="width: 1000px;">
-        <h2 class="event-title d-flex justify-content-left">Event 1:</h2>
+        <h2 class="event-title d-flex justify-content-left">Teacher's Day:</h2>
         <hr class="event-underline d-flex justify-content-left">
         <div class="wrapper">
           <div id="slider-wrap1">
               <ul id="slider1">
                  <li>
-                    <img class="gal-img" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">
+                    <img class="gal-img" src="{% static 'pages/gallery-slideshow/teachers-day-2019/TD1.png' %}">
                  </li>
 
                  <li>
-                    <img class="gal-img" src="{% static 'pages/gallery-slideshow/event-1/show-img-2.jpg' %}">
+                    <img class="gal-img" src="{% static 'pages/gallery-slideshow/teachers-day-2019/TD2.png' %}">
                  </li>
 
                  <li>
-                    <img class="gal-img" src="{% static 'pages/gallery-slideshow/event-1/show-img-3.jpg' %}">
+                    <img class="gal-img" src="{% static 'pages/gallery-slideshow/teachers-day-2019/TD3.png' %}">
                  </li>
 
                  <li>
-                    <img class="gal-img" src="{% static 'pages/gallery-slideshow/event-1/show-img-4.jpg' %}">
+                    <img class="gal-img" src="{% static 'pages/gallery-slideshow/teachers-day-2019/TD4.png' %}">
                  </li>
 
                  <li>
-                    <img class="gal-img" src="{% static 'pages/gallery-slideshow/event-1/show-img-5.jpg' %}">
+                    <img class="gal-img" src="{% static 'pages/gallery-slideshow/teachers-day-2019/TD5.png' %}">
+                 </li>
+
+                  <li>
+                    <img class="gal-img" src="{% static 'pages/gallery-slideshow/teachers-day-2019/TD6.png' %}">
+                 </li>
+
+                  <li>
+                    <img class="gal-img" src="{% static 'pages/gallery-slideshow/teachers-day-2019/TD7.png' %}">
                  </li>
               </ul>
 
@@ -64,29 +72,33 @@
 
     <!-- Event 2-->
     <div class="d-block mx-auto" style="width: 1000px;">
-        <h2 class="event-title d-flex justify-content-left">Event 2:</h2>
+        <h2 class="event-title d-flex justify-content-left">Intern Talk:</h2>
         <hr class="event-underline d-flex justify-content-left">
         <div class="wrapper">
           <div id="slider-wrap2">
               <ul id="slider2">
                  <li>
-                    <img class="gal-img" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">
+                    <img class="gal-img" src="{% static 'pages/gallery-slideshow/intern-talk-2019/IT1.png' %}">
                  </li>
 
                  <li>
-                    <img class="gal-img" src="{% static 'pages/gallery-slideshow/event-1/show-img-2.jpg' %}">
+                    <img class="gal-img" src="{% static 'pages/gallery-slideshow/intern-talk-2019/IT2.png' %}">
                  </li>
 
                  <li>
-                    <img class="gal-img" src="{% static 'pages/gallery-slideshow/event-1/show-img-3.jpg' %}">
+                    <img class="gal-img" src="{% static 'pages/gallery-slideshow/intern-talk-2019/IT3.png' %}">
                  </li>
 
                  <li>
-                    <img class="gal-img" src="{% static 'pages/gallery-slideshow/event-1/show-img-4.jpg' %}">
+                    <img class="gal-img" src="{% static 'pages/gallery-slideshow/intern-talk-2019/IT4.png' %}">
                  </li>
 
                  <li>
-                    <img class="gal-img" src="{% static 'pages/gallery-slideshow/event-1/show-img-5.jpg' %}">
+                    <img class="gal-img" src="{% static 'pages/gallery-slideshow/intern-talk-2019/IT5.png' %}">
+                 </li>
+
+                  <li>
+                    <img class="gal-img" src="{% static 'pages/gallery-slideshow/intern-talk-2019/IT6.png' %}">
                  </li>
               </ul>
 
@@ -157,15 +169,15 @@
     <!-- Static Images -->
     <div class="col-md-12">
         <div class="grid-container" style="margin-left: 45px;">
-          <img class="gal-img" style="width: 500px; height: 250px;" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">
-          <img class="gal-img" style="width: 500px; height: 250px;" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">
-          <img class="gal-img" style="width: 500px; height: 250px;" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">
-          <img class="gal-img" style="width: 500px; height: 250px;" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">
-          <img class="gal-img" style="width: 500px; height: 250px;" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">
-          <img class="gal-img" style="width: 500px; height: 250px;" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">
-          <img class="gal-img" style="width: 500px; height: 250px;" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">
-          <img class="gal-img" style="width: 500px; height: 250px;" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">
-          <img class="gal-img" style="width: 500px; height: 250px;" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">
+          <img class="stat-img" src="{% static 'pages/gallery-slideshow/Sclum_WS.png' %}">
+          <img class="stat-img" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">
+          <img class="stat-img" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">
+          <img class="stat-img" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">
+          <img class="stat-img" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">
+          <img class="stat-img" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">
+          <img class="stat-img" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">
+          <img class="stat-img" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">
+          <img class="stat-img" src="{% static 'pages/gallery-slideshow/event-1/show-img-1.jpg' %}">
         </div>
     </div>
     <!-- Static Images -->
