gazette structure added

--- a/SPE-website/pages/templates/pages/gazette.html
+++ b/SPE-website/pages/templates/pages/gazette.html
@@ -41,6 +41,22 @@
                 </div>
               </div>
 
+              <div class="grid-item">
+                  <div class="container">
+                    <iframe frameborder="0" scrolling="no" width="320" height="240"
+                                src="https://drive.google.com/file/d/1Jp5FNTGoW5gz938FEszqCWI4GWpc7yUd/preview"></iframe>
+                    <div>Gazette 2017</div>
+                </div>
+              </div>
+
+              <div class="grid-item">
+                  <div class="container">
+                    <iframe frameborder="0" scrolling="no" width="320" height="240"
+                                src="https://drive.google.com/file/d/1Jp5FNTGoW5gz938FEszqCWI4GWpc7yUd/preview"></iframe>
+                    <div>Gazette 2016</div>
+                </div>
+              </div>
+
             </div>
         <br><br><br>
         </div>
